<resources>
    <string name="app_name">Raven Android Awareness Kit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--left drawer-->
    <!--TODO correct fragment naming -->
    <string name="menu_home">Map</string>
    <string name="menu_gallery">Location Data</string>
    <string name="menu_slideshow">Forecast Data</string>

    <!-- location data -->
    <string name="elevation">ELEVATION</string>
    <string name="military_grid_reference_system">M.G.R.S</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="save_location_button">save location</string>
    <string name="refresh_location_button">refresh location</string>

    <!-- forecast data -->
    <string name="temperature">TEMPERATURE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="uv_index">UV INDEX</string>
    <string name="wind">WIND</string>
    <string name="dew_point">DEW POINT</string>

    <string name="null_data">null data</string>
    <string name="map_layers_button">Map Layers</string>
    <string name="doppler_radar_map_button">Doppler Radar</string>
    <string name="more_options_map_button">More…</string>

    <!--save new location activity -->
    <string name="hint_location_description">location description…</string>
    <string name="button_save">save</string>
    <string name="empty_not_saved">empty input, location not saved</string>
    <string name="add_new_location">add new location</string>
    <string name="search">Search...</string>


</resources>