<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.location.LocationFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_margin="@dimen/card_margin"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/locationDataWidgetHeader"
                        android:text="@string/elevation"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/locationDataWidgetContent"
                        android:text="@string/null_data"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_margin="@dimen/card_margin"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/locationDataWidgetHeader"
                        android:text="@string/military_grid_reference_system"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/locationDataWidgetContent"
                        android:text="@string/null_data"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_margin="@dimen/card_margin"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/locationDataWidgetHeader"
                        android:text="@string/longitude"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/locationDataWidgetContent"
                        android:text="@string/null_data"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_margin="@dimen/card_margin"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/locationDataWidgetHeader"
                        android:text="@string/latitude"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/locationDataWidgetContent"
                        android:text="@string/null_data"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>